test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args/src/storage_attr.sw
library;

pub struct S { }

impl S {
    #[storage(read, write)]
    pub fn ok() { }

    #[storage(red, writte)]
    #[storage(unknown_arg)]
    pub fn not_ok() { }
}